fixed issue #45, modals now scroll increased the spacing between lists changed the color $red changed the layout of the modals and input including spacing to make better use of the space.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,8 @@ body {
     height: 100vh;
     margin: 0;
     text-align: left;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 .theme-default {
     background: #5d5dff;
@@ -29,6 +31,14 @@ body {
     color: $theme-default-font-color-1;
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5d5dff',endColorstr='#3498db',GradientType=1 );
 }
+// .theme-stripe {
+//     background: #1fa2ff; /* Old browsers */
+//     background: -moz-linear-gradient(-45deg, #1fa2ff 0%, #1fa2ff 0%, #12d8fa 50%, #a6ffcb 100%); /* FF3.6-15 */
+//     background: -webkit-linear-gradient(-45deg, #1fa2ff 0%,#1fa2ff 0%,#12d8fa 50%,#a6ffcb 100%); /* Chrome10-25,Safari5.1-6 */
+//     background: linear-gradient(135deg, #1fa2ff 0%,#1fa2ff 0%,#12d8fa 50%,#a6ffcb 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fa2ff', endColorstr='#a6ffcb',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+// }
+
 .theme-dark {
     background: #303952; /* Old browsers */
     background: -moz-linear-gradient(-45deg, #303952 0%, #2c3e50 100%); /* FF3.6-15 */
